fix card sorting